[metadata]
name = json-entity
version = 0.0.2c1
author = immmdreza
author_email = ir310022@gmail.com
description = A simple and async json database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/immmdreza/simple-json-db
project_urls =
    Bug Tracker = https://github.com/immmdreza/simple-json-db/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    aiofiles
    ijson
include-package-data = True

[options.packages.find]
exclude =
    examples*
where = src
sjd = py.typed
